--- a/style.css
+++ b/style.css
@@ -15,8 +15,10 @@ html,
 body {
     width: 100%;
     height: 100%;
-
+    overflow: auto;
+    scrollbar-width: none;
 }
+
 
 #main {
     width: 100%;
@@ -45,7 +47,7 @@ body {
 #cursor {
     font-size: 1.2vw;
     font-weight: 200;
-    z-index: 5;
+    /* z-index: 5; */
     /* transform: translate(-50%,-50%); */
 }
 
